# zeta

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  PVS-Studio.cfg  README.md  sonar-project.properties  suppressions.txt
.github/workflows/: build_and_test.yml  sonarcloud.yml
cmake/: CTags.cmake  ClangFormat.cmake  ClangTidy.cmake  CommonProjectOptions.cmake  CompilerWarnings.cmake  CppCheck.cmake  MessageColors.cmake  PVSStudio.cmake  TargetLinkSystemLibraries.cmake
examples/: README.md  getting_started.z  hello.z
examples/c-examples/: .clang-format  do-while-loop-many.c  do-while-loop-one.c  do-while-loop-zero.c  for-loop-many.c  for-loop-one.c  for-loop-zero.c  function.c  recursion.c  recursion2.c  while-loop-many.c  while-loop-one.c  while-loop-zero.c
sh/: check_commit_msg.sh  check_license.sh
src/app/: CMakeLists.txt  app.cc  app.hh  main.cc
src/lib/: CMakeLists.txt
src/lib/include/StubLib/: lib.hh
src/lib/src/: lib.cc
tests/lib/: CMakeLists.txt  tests.cc
xtext/: .gitignore
xtext/com.tachyon.zeta.Zeta.parent/: pom.xml
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta/: pom.xml
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta.ide/: pom.xml
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta.ide/src/main/java/com/tachyon/zeta/ide/: ZetaIdeModule.java  ZetaIdeSetup.java
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta/src/main/java/com/tachyon/zeta/: GenerateZeta.mwe2  Zeta.xtext  ZetaRuntimeModule.java  ZetaStandaloneSetup.java
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta/src/main/java/com/tachyon/zeta/scoping/: ZetaScopeProvider.java
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta/src/main/java/com/tachyon/zeta/validation/: ZetaValidator.java
xtext/com.tachyon.zeta.Zeta.parent/com.tachyon.zeta.Zeta/src/test/java/com/tachyon/zeta/tests/: DeclarationTests.xtend  ZetaParsingTest.xtend
zeta/: CMakeLists.txt
zeta/src/: main.c  main.cc
